# openssl-shim

./: .gitmodules  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: FindOpenSSL.cmake  OpenSSLConfig.cmake.in
include/openssl/: applink.c  bio.h  conf.h  crypto.h  dh.h  engine.h  err.h  evp.h  hmac.h  opensslv.h  pem.h  rsa.h  ssl.h  x509.h  x509v3.h
src/: tls_apple.cpp  tls_backend.cpp  tls_common.cpp  tls_common.hpp  tls_internal.hpp  tls_mbedtls.cpp  tls_schannel.cpp  tls_shared_exports.inl
test/: CMakeLists.txt  run_asio_https_variant_roundtrip.py  run_mbedtls_reneg_roundtrip.py  run_selected_ctest.py  run_tls13_only_test.py  run_uwebsockets_https_roundtrip.py  test_asio_https_server_asn1.cpp  test_asio_https_server_chain_memory.cpp  test_asio_https_server_rsa_asn1.cpp  test_httplib_chain_file.cpp  test_ixwebsocket_client.cpp  test_mbedtls_direct_reneg_client.cpp  test_mbedtls_reneg_server.cpp  test_mbedtls_tls13_server.cpp  test_reneg_client.cpp  test_tls13_only_client.cpp  test_uwebsockets_https_server.cpp
test/fixtures/: chain-intermediate-ca-crt.pem  chain-root-ca-crt.pem  chain-server-crt.pem  chain-server-fullchain-crt.pem  chain-server-key.pem  trusted-server-crt.der  trusted-server-key.der
test/tls13_server/: CMakeLists.txt
